--- a/kas-pqc.yml
+++ b/kas-pqc.yml
@@ -56,7 +56,7 @@ local_conf_header:
     CONF_VERSION = "2"
     INHERIT += "rm_work"
     PACKAGE_CLASSES = "package_deb"
-    DISTRO_FEATURES += "systemd usrmerge wifi"
+    DISTRO_FEATURES += "systemd usrmerge wifi pqc"
     VIRTUAL-RUNTIME_init_manager = "systemd"
     DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
   debug-tweaks: |
