--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Build
-      run: kas-container build kas-pqc.yml
+      run: kas-container dump kas-pqc.yml
 
     - name: Test
       working-directory: ${{github.workspace}}
